Multi platform POM